--- a/src/index.css
+++ b/src/index.css
@@ -119,7 +119,7 @@ nav {
 }
 
 .col-header {
-  padding: 1.5rem;
+ padding: 1.5rem 1.5rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -154,7 +154,7 @@ nav {
 }
 
 .col-body {
-  padding: 1.5rem;
+  padding: 0 1.5rem 1.5rem;
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
